Sun Mar  6 20:04:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Process_Manager.cpp:
          Added include of OS_NS_sys_time.h to get ACE_OS::gettimeofday

        * ace/Process_Manager.h:
          Include Time_Value.h instead of Countdown_Time.h

Sun Mar  6 19:06:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Countdown_Time.{h,cpp}:
          Removed not needed includes, removed workaround for WinCE, it is just
          needed for ACE_Time_Value that is in Time_Value.h and removed empty
          comment lines

Sun Mar  6 19:01:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/SSL/SSL_SOCK_Acceptor.cpp:
          Added the include of Countdown_Time.h

Sun Mar  6 18:59:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Time_Value.h:
          Readded removed include of os_time.h to fix compile errors with
          Borland

Sun Mar  6 15:01:00 2005  Marek Brudka  <mbrudka@aster.pl>

	* include/makeinclude/wrapper_macros.GNU (Message):
	* bin/MakeProjectCreator/config/global.features (Module):
	* ACE-INSTALL.html (Module):
	Simplied Makefile generation for GUI support in ACE and TAO.

Sun Mar  6 01:58:04 2005  Tao Lu  <lu@dre.vanderbilt.edu>

	* Kokyu/tests/DSRT_MIF/MIF.cpp
	  Added the include of Countdown_Time.h

Sun Mar  6 00:52:13 2005  Tao Lu  <lu@dre.vanderbilt.edu>

	* ace/Process.cpp
	* ace/Process_Manager.h
	* ace/Process_Manager.cpp
	* ace/Reactor_Impl.h
	* ace/TP_Reactor.cpp
	* ace/Proactor_Impl.h
	* ace/POSIX_CB_Proactor.cpp
	* ace/SSL/SSL_SOCK_Connector.cpp
	* ace/SSL/SSL_SOCK_Stream.cpp
	  Removed unnecessary includes and added include
	  at proper places.

	* ace/ace.mpc
	  Added Countdown_Time.cpp.

Sat Mar  5 23:57:53 2005  Tao Lu  <lu@dre.vanderbilt.edu>

	* ace/Time_Value.h
	* ace/Time_Value.cpp
	* ace/Time_Value.inl
	* ace/Countdown_Time.h
	* ace/Countdown_Time.cpp
	  moved the ACE_Countdown_Time to seperate files to avoid